# liesel

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE.md  README-PyPI.md  README.Rmd  README.md  README.qmd  conftest.py  index.html  liesel.Rproj  liesel.html  plan.md  pyproject.toml  search.js  setup.cfg  spike-and-slab.ipynb
.github/: README.md  README.qmd
.github/workflows/: docs.yml  doctest.yml  pdoc.yml  pre-commit.yml  pypi.yml  pytest-cron.yml  pytest-main.yml  pytest-pull.yml  pytest.yml  quarto.yml  tutorials.yml  update-tutorials.yml
docs/: Makefile
docs/source/: conf.py  goose.rst  index.rst  model.rst  test.rst  tutorials_overview.rst  welcome.md
docs/source/_static/: custom.css
docs/source/tutorials/: .gitignore
liesel/: __init__.py  __version__.py  docs.py  goose.html  liesel.html  logging.py  option.py  splines.py  tfp.html
liesel/bijectors/: __init__.py  algebraic_sigmoid.py
liesel/contrib/: __init__.py  splines.py
liesel/distributions/: __init__.py  copulas.py  mvn_degen.py  nodist.py
liesel/experimental/: __init__.py  arviz.py  pymc.py  splines.py
liesel/goose/: __init__.py  builder.py  chain.py  da.py  engine.py  epoch.py  gibbs.py  hmc.py  interface.py  interfaces.py  iwls.py  iwls_utils.py  kernel.py  kernel_sequence.py  mh.py  mh_kernel.py  mm.py  models.py  nuts.py  optim.py  pytree.py  rw.py  summary_m.py  summary_viz.py  types.py  warmup.py
liesel/liesel/: __init__.py  distreg.py  goose.py  model.py  nodes.py  types.py  viz.py
liesel/model/: __init__.py  distreg.py  goose.py  legacy.py  logprob.py  model.py  nodes.py  viz.py
liesel/tfp/: jax.html  numpy.html
liesel/tfp/jax/: bijectors.html  distributions.html
liesel/tfp/numpy/: bijectors.html  distributions.html
misc/: docstring-styleguide.md  format-rmd.R  lint-rmd.R  update-jax-tfp.sh
misc/pdoc-template/: custom.css  module.html.jinja2
src/liesel/: __init__.py  __version__.py  option.py
src/liesel/bijectors/: __init__.py
src/liesel/distributions/: __init__.py  copulas.py  mvn_degen.py  mvn_log_cholesky_param.py
src/liesel/experimental/: __init__.py  arviz.py  batching.py  pymc.py
src/liesel/goose/: __init__.py  builder.py  chain.py  da.py  da_kernel.py  engine.py  epoch.py  ess.py  gibbs.py  hmc.py  interface.py  interface_log_prob.py  iwls.py  kernel.py  kernel_sequence.py  mcmc_spec.py  mh.py  mh_kernel.py  mm.py  nuts.py  optim.py  pytree.py  rw.py  summary_m.py  summary_viz.py  types.py  warmup.py
src/liesel/model/: __init__.py  distreg.py  goose.py  legacy.py  logprob.py  model.py  names.py  nodes.py  viz.py
src/liesel/optim/: __init__.py  _engine_utils.py  _log_lik.py  _model_utils.py  batch.py  engine.py  liesel_optim.py  liesel_vi.py  loss.py  optimizer.py  split.py  state.py  stop.py  types.py  util.py  vi.py
src/liesel/vi/: __init__.py  builder.py  interface.py  optimizer.py  summary.py
tests/: conftest.py  mock_kernel.py  test_option.py  test_splines.py
tests/bijectors/: test_algebraic_sigmoid.py
tests/contrib/: test_splines.py
tests/distributions/: test_gaussian_copula.py  test_mvn_degen.py
tests/experimental/: test_batched_log_prob.py  test_batching.py  test_conversion_to_arviz.py  test_pymc.py
tests/experimental/nn/: test_nn.ipynb
tests/experimental/optim/: showcase_batch.ipynb  showcase_liesel_optim.ipynb  showcase_liesel_vi.ipynb  showcase_optim.ipynb  showcase_split.ipynb  showcase_vi.ipynb  test_auto_transform_params.ipynb  test_batch.py  test_batch_manager.ipynb  test_biject_api.ipynb  test_engine.py  test_imports.py  test_liesel_vi.py  test_loss.py  test_optim.ipynb  test_optim.py  test_optimizer.py  test_quick.py  test_quick_optim.ipynb  test_quick_optim_vi.ipynb  test_split.py  test_state.py  test_stop.py  test_vi.ipynb  test_vi.py  test_vi_fullrank.ipynb  test_vi_high_n.ipynb  test_vi_linreg.ipynb
tests/experimental/vi/: test_builder.py  test_fixtures_conjugate.py  test_interface.py  test_optimizer.py  test_optimizer_inits.py  test_optimizer_opt.py  test_summary.py
tests/goose/: deterministic_kernels.py  test_builder.py  test_chain.py  test_conversion_to_arviz.py  test_deterministic_kernels.py  test_engine.py  test_epoch.py  test_interface_dataclass.py  test_interface_dict.py  test_interface_liesel.py  test_interface_log_prob.py  test_interface_namedtuple.py  test_iwls_utils.py  test_kernel_sequence.py  test_mcmcspec.py  test_model_dataclass.py  test_model_dict.py  test_optim.py  test_pytree_dataclass.py  test_pytree_leaf_ops.py  test_subset_integration.py  test_summary.py  test_summary_m.py  test_summary_object.py  test_summary_viz.py  test_warmup.py
tests/goose/files/: for_test_summary.py  summary_res.pkl  summary_res_long.pkl  summary_viz_res.pkl
tests/goose/kernels/: model_lm.py  test_ess.py  test_gibbs.py  test_hmc.py  test_iwls.py  (+3 more)
tests/liesel/: test_distreg.py  test_model.py  test_node_basics.py  test_node_distribution.py  test_node_group.py  test_node_subclasses.py  test_node_update.py  test_parameter_transform.py
tests/model/: test_biject_parameters.py  test_bijections.py  test_custom_log_prob.py  test_distreg.py  test_goose.py  test_graph_builder.py  test_group.py  test_input_group.py  test_legacy.py  test_log_prob.py  test_model.py  test_model_modification.ipynb  test_model_modification.py  test_mutable_model.ipynb  test_node.py  test_plot.ipynb  test_replace.ipynb  test_subset_calc.py  test_var.py  test_var_log_prob.py  test_var_transform.py  test_viz.py
tests/optim/: showcase_batch.ipynb  showcase_liesel_optim.ipynb  showcase_liesel_vi.ipynb  showcase_optim.ipynb  showcase_split.ipynb  showcase_vi.ipynb  test_batch.py  test_batch_manager.ipynb  test_engine.py  test_imports.py  test_liesel_vi.py  test_loss.py  test_loss_scaling.ipynb  test_optim.ipynb  test_quick.py  test_quick_optim.ipynb  test_quick_optim_vi.ipynb  test_split.py  test_state.py  test_stop.py  test_vi.ipynb  test_vi.py  test_vi_fullrank.ipynb  test_vi_high_n.ipynb  test_vi_linreg.ipynb
tests/tfp/: test_algebraic_sigmoid.py  test_gaussian_copula.py  test_smooth_prior.py
(+103 files in other folders)
