[project]
name = "liesel"
dynamic = ["version"]
description = "A probabilistic programming framework with a focus on semi-parametric regression"
readme = "README.md"
authors = [
    { name = "Paul Wiemann" },
    { name = "Hannes Riebl" },
    { name = "Johannes Brachem" },
    { name = "Gianmarco Callegher" },
]
license = "MIT"
license-files = ["LICENSE.md"]
keywords = ["statistics", "machine-learning"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
]


requires-python = ">=3.13,<3.14"
dependencies = [
    "arviz>=1.0",
    "blackjax>=1.2.1",
    "dill>=0.4",
    "jax>=0.7.0",
    "jaxlib>=0.7.0",
    "matplotlib>=3.10.7",
    "networkx>=3.4.2",
    "numpy>=2.0",
    "optax>=0.1.7",
    "pandas>=1.4",
    "pydot>=3.0",
    "scipy>=1.14.1",
    "seaborn>=0.13",
    "tfp-nightly>=0.26.0.dev20250811",
    "tqdm>=4.62",
]

[project.urls]
Homepage = "https://liesel-project.org"
Documentation = "https://liesel-project.org"
Repository = "https://github.com/liesel-devs/liesel.git"


[dependency-groups]
dev = [
    "ruff>=0.11.7",
    "mypy>=2.1.0",
    "myst-nb>=1.0.0",
    "pre-commit>=4.6.0",
    "pydata-sphinx-theme>=0.18.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "rtds-action>=1.1.0",
    "sphinx>=7.2.6",
    "sphinx-autodoc-typehints>=1.19",
    "sphinx-book-theme>=1.1.0",
    "sphinx-copybutton>=0.5",
    "sphinx-remove-toctrees>=0.0.3",
    "liesel_gam>=0.1.3"
]

pymc = ["pymc>=6.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
files = ["liesel", "tests"]
ignore_missing_imports = true
scripts_are_modules = true
disable_error_code = "annotation-unchecked"

[[tool.mypy.overrides]]
module = "jax.*"
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = "tests"
# turn warnings into errors and filter out specific warnings
filterwarnings = [
    "error",
    "ignore::FutureWarning:arviz",
    # "ignore::DeprecationWarning:tensorflow_probability",
    "ignore:jax.interpreters.xla.pytype_aval_mappings is deprecated:DeprecationWarning:tensorflow_probability.python.internal.backend.jax.ops",
    "ignore:jax.core.pytype_aval_mappings is deprecated:DeprecationWarning:tensorflow_probability.python.internal.backend.jax.ops",
    "ignore:shape requires ndarray or scalar arguments, got <class 'NoneType'> at position 0. In a future JAX release this will be an error.:DeprecationWarning:tensorflow_probability.python.internal.backend.jax.random_generators",
    "ignore:.*interactive_bk attribute was deprecated in Matplotlib 3.9.*:matplotlib._api.deprecation.MatplotlibDeprecationWarning",

    # Needed when testing against the minimum supported version.
    "ignore:JAXopt is no longer maintained:DeprecationWarning",
]

[tool.ruff.lint]
extend-select = [
    "F",  # pyflakes (flake8 core)
    "E",  # pycodestyle errors (flake8)
    "W",  # pycodestyle warnings (flake8)
    "I",  # isort (import sorting)
    "UP", # pyupgrade (modern syntax)
]

extend-ignore = []

[tool.hatch.version]
path = "src/liesel/__version__.py"

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
