[metadata]
name = liesel
version = attr: liesel.__version__.__version__
description = A probabilistic programming framework with a focus on semi-parametric regression
long_description = file: README.md
long_description_content_type = text/markdown
url = https://liesel-project.org
author = Paul Wiemann, Hannes Riebl
keywords = statistics, machine-learning
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.10
install_requires =
    arviz>=0.11
    blackjax>=0.8.3
    deprecated>=1.2.13
    jax>=0.3.23
    jaxlib>=0.3.22
    jaxopt>=0.4,<0.5
    matplotlib>=3.5
    networkx>=2.6
    numpy>=1.21.4
    pandas>=1.3.5
    scipy>=1.7.3
    seaborn>=0.11
    tensorflow-probability>=0.17
    tqdm>=4.62

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    myst-parser
    pre-commit
    pytest
    pytest-cov
    pyupgrade
    sphinx>=4.5
    sphinx-autodoc-typehints>=1.19
    sphinx-book-theme>=0.3
    sphinx-copybutton>=0.5
    sphinx-remove-toctrees>=0.0.3
    types-deprecated
pymc =
    pymc>=4.1.3,<4.2

[flake8]
# make flake8 compatible with black
max-line-length = 88
extend-ignore = E203
