[metadata]
name = liesel
version = attr: liesel.__version__.__version__
description = A probabilistic programming framework with a focus on semi-parametric regression
long_description = file: README.md
long_description_content_type = text/markdown
url = https://liesel-project.org
author = Paul Wiemann, Hannes Riebl, Johannes Brachem, Gianmarco Callegher
keywords = statistics, machine-learning
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.10
install_requires =
    arviz>=0.15
    blackjax>=1.0
    deprecated>=1.2
    dill>=0.3
    jax>=0.4.1
    jaxlib>=0.4.1
    matplotlib>=3.5
    networkx>=2.6
    numpy>=1.22,!=1.24.0
    pandas>=1.4
    scipy>=1.8.0
    seaborn>=0.13
    tensorflow-probability>=0.17
    tqdm>=4.62
    optax>=0.1.7

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    myst-nb>=1.0.0
    pre-commit
    pytest
    pytest-cov
    pyupgrade
    sphinx>=7.2.6
    sphinx-autodoc-typehints>=1.19
    pydata-sphinx-theme
    sphinx-book-theme>=1.1.0
    sphinx-copybutton>=0.5
    sphinx-remove-toctrees>=0.0.3
    types-deprecated
    rtds-action
pymc =
    pymc>=5.9

[options.packages.find]
include = liesel*

[flake8]
per-file-ignores = __init__.py:F401
# make flake8 compatible with black
max-line-length = 88
extend-ignore = E203
